# timemint-protocol

./: .gitignore  LICENSE  README.md  package.json  pnpm-workspace.yaml
contracts/: Cargo.toml  README.md
contracts/src/: lib.rs  main.rs
contracts/tests/: timeslot_tests.rs
examples/: README.md
examples/serverless-functions/: README.md  book-slot.ts  google-oauth.ts  package.json  tsconfig.json
examples/timemint-component-demo-site/: README.md  index.html  package.json  tailwind.config.cjs
examples/timemint-component-demo-site/api/: creator-available-slots.js  creator-google-auth.js
examples/timemint-component-demo-site/src/: AdminPanel.jsx  App.jsx  GoogleAuthProviderWrapper.jsx  router.jsx  web3.ts
examples/timemint-component-demo-site/src/abi/: timemint.json
examples/timemint-demo-site/: README.md  index.html  package.json
examples/timemint-demo-site/src/: AdminPanel.jsx  App.css  App.jsx  GoogleLoginButton.jsx  main.jsx
examples/timemint-demo-site/src/pages/: admin.jsx
