[package]
name = "timemint_contracts"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hummusonrails/timemint-protocol"
repository = "https://github.com/hummusonrails/timemint-protocol"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "nft", "calendar"]
description = "Stylus smart contract for the TimeMint Protocol: tokenized booking of calendar slots."

[[bin]]
name = "timemint-contract"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = { version = "=0.8.4", default-features = false, features = ["mini-alloc"] }
alloy = { version = "=0.7.3", default-features = false }
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types = { version = "=0.8.20", default-features = false }
alloy-sol-macro = { version = "=0.8.20", default-features = false }
alloy-sol-macro-expander = { version = "=0.8.20", default-features = false }
alloy-sol-macro-input = { version = "=0.8.20", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dev-dependencies]

[features]
export-abi = ["stylus-sdk/export-abi"]
debug      = ["stylus-sdk/debug"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false
